--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,6 +25,8 @@
             - else
               %li= link_to 'Sign Up', new_user_registration_path
               %li= link_to 'Login', new_user_session_path
-    #body-container.fluid-container{:style => "margin-top: 70px"}
-      = yield
-      = yield :javascript
+    .container{:style => "margin-top: 70px"}
+      #content
+        %p#notice= notice
+        = yield
+        = yield :javascript
