--- a/app/views/blogs/index.html.haml
+++ b/app/views/blogs/index.html.haml
@@ -4,7 +4,7 @@
   .row
     .col-md-6
       %h1 Blogs
-    .col-md-6
+    .col-md-6.top-space
       .pull-right
         = display_new_blog_button
         = display_my_blogs_button
